# scener

./: .clang-format  .cproject  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  LICENSE  README.markdown  build.sh  git-update-submodules.sh  source-format.sh  source-tidy.sh  update-external-sources.sh  update_external_sources.sh
RendererSample/: CMakeLists.txt
RendererSample/Content/earthshaker/: earthshaker.gltf  earthshaker0FS.glsl  structures.glsl
RendererSample/Headers/: EarthShaker.hpp
SceneR/: .cproject  .project  CMakeLists.txt  SceneR.pro
SceneR.Framework/: .cproject  .project  CMakeLists.txt  SceneR.Framework.pro  generate_resources.cmake
SceneR.Framework.Tests/: .cproject  .project  CMakeLists.txt
SceneR.Framework.Tests/Headers/: BinaryReaderTest.hpp  EncodingUTF8Test.hpp  EqualityHelper.hpp  FileStreamTest.hpp  MathHelperTest.hpp  MathTest.hpp  MatrixTest.hpp  MemoryStreamTest.hpp  PlaneTest.hpp  QuaternionTest.hpp  TimeSpanTest.hpp  Vector2Test.hpp  Vector3Test.hpp  Vector4Test.hpp
SceneR.Framework.Tests/Sources/: BinaryReaderTest.cpp  EncodingUTF8Test.cpp  EqualityHelper.cpp  FileStreamTest.cpp  MathHelperTest.cpp  MathTest.cpp  MatrixTest.cpp  MemoryStreamTest.cpp  PlaneTest.cpp  QuaternionTest.cpp  TestRunner.cpp  TimeSpanTest.cpp  UTF8EncodingTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
SceneR.Framework/Headers/Content/: ContentLoadException.hpp  ContentManager.hpp  ContentReader.hpp  ContentReaderContext.hpp  ContentResourceManager.hpp  ContentType.hpp  ContentTypeReader.hpp  ContentTypeReaderManager.hpp  SharedResourceAction.hpp  TypeReaders.hpp  json11.hpp
SceneR.Framework/Headers/Core/: Color.hpp  Core.hpp  Quaternion.hpp  Vector3.hpp  Vector4.hpp
SceneR.Framework/Headers/Framework/: BoundingBox.hpp  BoundingFrustrum.hpp  BoundingSphere.hpp  Color.hpp  Component.hpp  ContainmentType.hpp  Core.hpp  DrawableComponent.hpp  GraphicsDeviceManager.hpp  IComponent.hpp  IDrawable.hpp  IGraphicsDeviceManager.hpp  IUpdateable.hpp  MathHelper.hpp  Matrix.hpp  Plane.hpp  PlaneIntersectionType.hpp  PresentInterval.hpp  Quaternion.hpp  Ray.hpp  RenderTime.hpp  Renderer.hpp  RendererServiceContainer.hpp  RendererTimer.hpp  RendererWindow.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
SceneR.Framework/Headers/GLTF/: Accessor.hpp  AttributeType.hpp  Buffer.hpp  BufferType.hpp  BufferView.hpp  BufferViewTarget.hpp  ComponentType.hpp  Material.hpp  MaterialTechnique.hpp  Model.hpp  ModelMesh.hpp  ModelMeshPart.hpp  RenderingStateType.hpp  TechiqueParameter.hpp  TechiquePass.hpp  Technique.hpp  TechniqueParameter.hpp  TechniqueParameterType.hpp  TechniquePass.hpp  TechniquePassDetails.hpp  TechniquePassInstanceProgram.hpp  TechniquePassStates.hpp
SceneR.Framework/Headers/Graphics/: Accessor.hpp  AmbientLight.hpp  AnimatedModel.hpp  Animation.hpp  AnimationClip.hpp  AnimationPlayer.hpp  AttributeType.hpp  BasicEffect.hpp  Blend.hpp  BlendFunction.hpp  BlendState.hpp  Buffer.hpp  BufferObject.hpp  BufferTarget.hpp  BufferType.hpp  BufferUsage.hpp  BufferView.hpp  ColorWriteChannels.hpp  CompareFunction.hpp  ComponentType.hpp  CullMode.hpp  DepthStencilState.hpp  DirectionalLight.hpp  DisplayMode.hpp  Effect.hpp  EffectDirtyFlags.hpp  EffectHelpers.hpp  EffectMaterial.hpp  EffectParameter.hpp  EffectParameterClass.hpp  EffectParameterCollection.hpp  EffectParameterType.hpp  EffectPass.hpp  EffectPassInstanceProgram.hpp  EffectPassStates.hpp  EffectTechnique.hpp  FillMode.hpp  GraphicsAdapter.hpp  GraphicsDevice.hpp  GraphicsProfile.hpp  (+60 more)
SceneR.Framework/Headers/IO/: File.hpp  Path.hpp
SceneR.Framework/Headers/Input/: ButtonState.hpp  Buttons.hpp  KeyState.hpp  Keyboard.hpp  KeyboardState.hpp  Keys.hpp  Mouse.hpp  MouseState.hpp
SceneR.Framework/Headers/Shaders/: Shader.hpp  ShaderProgram.hpp  ShaderType.hpp
SceneR.Framework/Headers/System/: BitConverter.hpp  Core.hpp  IDisposable.hpp  Math.hpp  Pointer.hpp  TimeSpan.hpp
SceneR.Framework/Headers/Texture/: DdsCaps.hpp  DdsFourCC.hpp  DdsPixelFormat.hpp  Surface.hpp  SurfaceMipmap.hpp
SceneR.Framework/Resources/: BasicEffect.frag  BasicEffect.glsl  BasicEffect.vert  Common.glsl  Lighting.glsl  SkinnedEffect.frag  SkinnedEffect.glsl  SkinnedEffect.vert  Structures.glsl
SceneR.Framework/Sources/Content/: ContentLoadException.cpp  ContentManager.cpp  ContentReader.cpp  ContentReaderContext.cpp  ContentTypeReader.cpp  ContentTypeReaderManager.cpp  SharedResourceAction.cpp  json11.cpp
SceneR.Framework/Sources/Core/: MathHelper.cpp  Matrix.cpp
SceneR.Framework/Sources/Framework/: BoundingBox.cpp  BoundingFrustrum.cpp  BoundingFrustum.cpp  BoundingSphere.cpp  Color.cpp  Component.cpp  DrawableComponent.cpp  GraphicsDeviceManager.cpp  IComponent.cpp  IDrawable.cpp  IGraphicsDeviceManager.cpp  IUpdateable.cpp  MathHelper.cpp  Matrix.cpp  Plane.cpp  Quaternion.cpp  Ray.cpp  RenderTime.cpp  Renderer.cpp  RendererServiceContainer.cpp  RendererTimer.cpp  RendererWindow.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
SceneR.Framework/Sources/GLTF/: Model.cpp
SceneR/Content/: BasicEffect.frag  BasicEffect.vert  BasicEffect_FS.glsl  BasicEffect_VS.glsl  SkinnedEffect.frag  SkinnedEffect.vert  SkinnedEffect_VS.glsl
SceneR/Headers/: AstroBoy.hpp  BumbleBee.hpp  Camera.hpp  CustomRenderer.hpp  EarthShaker.hpp  Felicia.hpp  Marcus.hpp  SampleModel.hpp  SampleRenderer.hpp  WarForrest.hpp
SceneR/Sources/: AstroBoy.cpp  BumbleBee.cpp  Camera.cpp  CustomRenderer.cpp  EarthShaker.cpp  Felicia.cpp  Marcus.cpp  SampleModel.cpp  SampleRenderer.cpp  WarForrest.cpp  main.cpp
Source/: CMakeLists.txt
Source/SceneR/: CMakeLists.txt  IDisposable.hpp  TimeSpan.cpp  TimeSpan.hpp
Source/Tests/: CMakeLists.txt
Sources/: main.cpp  (+2 more)
source/: CMakeLists.txt
source/samples/: CMakeLists.txt
source/scener/: CMakeLists.txt  TimeSpan.hpp  timespan.hpp
source/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: timespan_test.hpp
tests/io/: binary_reader_test.cpp  binary_reader_test.hpp  file_stream_test.cpp  memory_stream_test.cpp
tests/text/: utf8_encoding_test.cpp
(+1414 files in other folders)
